--- a/TPSA/Makefile.am
+++ b/TPSA/Makefile.am
@@ -4,4 +4,4 @@ libTPSALib_a_SOURCES = TPSALib.f
 
 libLieLib_a_SOURCES  = LieLib.f
 
-FFLAGS   = -g -O2 -Wall -fbounds-check -fPIC
+AM_FFLAGS   = -g -O2 -Wall -fbounds-check -fPIC
