--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,9 +1,10 @@
-bin_PROGRAMS = fmap get_dnu vlad tracy_2_3
+bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map
 
-fmap_SOURCES      = fmap.cc
-get_dnu_SOURCES   = get_dnu.cc
-vlad_SOURCES      = vlad.cc
-tracy_2_3_SOURCES = tracy_2_3.cc
+fmap_SOURCES       = fmap.cc
+get_dnu_SOURCES    = get_dnu.cc
+vlad_SOURCES       = vlad.cc
+tracy_2_3_SOURCES  = tracy_2_3.cc
+carbon_map_SOURCES = carbon_map.cc
 
 LIBS     = -L$(TRACY_LIB)/tracy/lib -ltracy_ptc -lTPSALib -lLieLib \
            -L$(NUM_REC)/lib -lnum_rec \
