--- a/projects/src/Makefile.am
+++ b/projects/src/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS      = ptc
 
 bin_PROGRAMS = optics dynap leac dnu touschek ibs vlad tbt \
                max_iv_1 max_iv_2 ibs_for_les delta bare_da match \
-               carbon_map dls 6BA track_fft
+               carbon_map dls 6BA track_fft m4
 
 #sc_f_LINK    = gfortran -g -O0 -Wall -fbounds-check -o sc_f
 
@@ -15,7 +15,6 @@ touschek_SOURCES    = touschek.cc
 ibs_SOURCES         = ibs.cc
 vlad_SOURCES        = vlad.cc
 tbt_SOURCES         = tbt.cc
-#m4_1_SOURCES      = m4_1.cc
 max_iv_1_SOURCES    = max_iv_1.cc
 max_iv_2_SOURCES    = max_iv_2.cc
 ibs_for_les_SOURCES = ibs_for_les.cc
@@ -26,6 +25,7 @@ carbon_map_SOURCES  = carbon_map.cc
 dls_SOURCES         = dls.cc
 6BA_SOURCES         = 6BA.cc
 track_fft_SOURCES   = track_fft.cc
+m4_SOURCES          = m4.cc
 
 #LIBS     = -L$(TRACY_LIB)/tracy -ltracy
 # gfortran needs to be before stdc_++ for Fortran programs
