--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map drv_terms get_nl_optics \
-               opt_des_1_ptc
+               opt_des_1_ptc opt_des_2_ptc
 
 fmap_SOURCES          = fmap.cc
 get_dnu_SOURCES       = get_dnu.cc
@@ -9,6 +9,7 @@ carbon_map_SOURCES    = carbon_map.cc
 drv_terms_SOURCES     = drv_terms.cc
 get_nl_optics_SOURCES = get_nl_optics.cc
 opt_des_1_ptc_SOURCES = opt_des_1_ptc.cc
+opt_des_2_ptc_SOURCES = opt_des_2_ptc.cc
 
 LIBS     = -L$(TRACY_LIB)/tracy/lib -ltracy_ptc -lTPSALib -lLieLib \
            -L$(NUM_REC)/lib -lnum_rec \
