--- a/projects/src/Makefile.am
+++ b/projects/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS      = ptc
 bin_PROGRAMS = optics dynap leac dnu touschek ibs vlad tbt \
                max_iv_1 max_iv_2 ibs_for_les delta bare_da match \
                carbon_map dls 6BA track_fft m4 m4_mod dls_ii track opt_des_1 \
-               id_model sigma tech_note
+	       opt_des_2 id_model sigma tech_note
 
 #sc_f_LINK    = gfortran -g -O0 -Wall -fbounds-check -o sc_f
 
@@ -31,6 +31,7 @@ m4_mod_SOURCES      = m4_mod.cc
 dls_ii_SOURCES      = dls_ii.cc
 track_SOURCES       = track.cc
 opt_des_1_SOURCES   = opt_des_1.cc
+opt_des_2_SOURCES   = opt_des_2.cc
 id_model_SOURCES    = id_model.cc
 sigma_SOURCES       = sigma.cc
 tech_note_SOURCES   = tech_note.cc
