--- a/projects/src/Makefile.am
+++ b/projects/src/Makefile.am
@@ -31,7 +31,7 @@ m4_mod_SOURCES      = m4_mod.cc
 dls_ii_SOURCES      = dls_ii.cc
 track_SOURCES       = track.cc
 opt_des_1_SOURCES   = opt_des_1.cc
-#opt_des_2_SOURCES   = opt_des_2.cc newuoa.f
+#opt_des_2_SOURCES   = opt_des_2.cc Powell/src/newuoa.f
 opt_des_2_SOURCES   = opt_des_2.cc
 id_model_SOURCES    = id_model.cc
 sigma_SOURCES       = sigma.cc
