--- a/projects/src/Makefile.am
+++ b/projects/src/Makefile.am
@@ -3,7 +3,7 @@
 bin_PROGRAMS = optics dynap leac dnu touschek ibs vlad tbt \
                max_iv_1 max_iv_2 ibs_for_les delta bare_da match \
                carbon_map dls 6BA track_fft m4 m4_mod dls_ii track opt_des_1 \
-	       opt_des_2 id_model sigma tech_note dx_dj tune_scan
+	       opt_des_2 id_model sigma tech_note dx_dj tune_scan sxt
 
 #sc_f_LINK    = gfortran -g -O0 -Wall -fbounds-check -o sc_f
 
@@ -38,9 +38,10 @@ sigma_SOURCES       = sigma.cc
 tech_note_SOURCES   = tech_note.cc
 dx_dj_SOURCES       = dx_dj.cc
 tune_scan_SOURCES   = tune_scan.cc
+sxt_SOURCES         = sxt.cc
 
-opt_des_2_LDADD = -L/usr/lib/x86_64-linux-gnu \
-	  	  -lgfortran
+#opt_des_2_LDADD = -L/usr/lib/x86_64-linux-gnu \
+#	  	  -lgfortran
 
 #LIBS     = -L$(TRACY_LIB)/tracy -ltracy
 # gfortran needs to be before stdc_++ for Fortran programs
