Port to MacBook.

--- a/projects/configure.ac
+++ b/projects/configure.ac
@@ -13,7 +13,8 @@ AC_PROG_LN_S
 AC_PROG_CPP
 AC_PROG_RANLIB
 AC_PROG_CXX
-AC_PROG_F77(gfortran)
+AC_PROG_F77(gfortran-9)
+#AC_PROG_F77(gfortran)
 
 # Checks for libraries.
 
