--- a/TPSA/Makefile.am
+++ b/TPSA/Makefile.am
@@ -4,5 +4,7 @@ libTPSALib_a_SOURCES = TPSALib.f
 
 libLieLib_a_SOURCES  = LieLib.f
 
-FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
+#FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
+FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium
+
 AM_FFLAGS = -g -O2 -Wall -fbounds-check -fPIC
