--- a/TPSA/Makefile.am
+++ b/TPSA/Makefile.am
@@ -5,6 +5,7 @@ libTPSALib_a_SOURCES = TPSALib.f
 libLieLib_a_SOURCES  = LieLib.f
 
 #FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
-FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium
+FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium \
+	    -w -fallow-argument-mismatch -O2
 
 AM_FFLAGS = -g -O2 -Wall -fbounds-check -fPIC
