--- a/configure.ac
+++ b/configure.ac
@@ -15,8 +15,8 @@ AC_PROG_LN_S
 AC_PROG_CPP
 AC_PROG_RANLIB
 AC_PROG_CXX(gcc)
-AC_PROG_F77(gfortran-9)
-#AC_PROG_F77(gfortran)
+#AC_PROG_F77(gfortran-9)
+AC_PROG_F77(gfortran)
 #AC_PROG_F77(g77)
 
 # Checks for libraries.
