Debugging refactoring for polymorphic beam line class.

--- a/tracy/src/Makefile.am
+++ b/tracy/src/Makefile.am
@@ -1,4 +1,5 @@
-lib_LIBRARIES          = libtracy.a libtracy_ptc.a
+#lib_LIBRARIES          = libtracy.a libtracy_ptc.a
+lib_LIBRARIES          = libtracy.a
 
 libtracy_a_SOURCES     = tracy_lib.cc
 
