--- a/tracy/src/Makefile.am
+++ b/tracy/src/Makefile.am
@@ -10,8 +10,10 @@ AM_CPPFLAGS = -I../inc -I$(NUM_REC)/inc
 #INCLUDES = -I../inc -I$(NUM_REC)/inc \
 #	   -I/usr/include/c++/3.3.6
 
+# Fortan flags.
 FFLAGS      = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
-AM_CXXFLAGS = -g -O0 -Wall -Wno-error=all -fPIC
+# C++ flags.
+AM_CXXFLAGS = -std=c++11 -g -O0 -Wall -Wno-error=all -fPIC
 # AM_CXXFLAGS = -g -O0 -Wall -Wno-error=all -fno-implicit-templates -fPIC
 #CXXFLAGS = -pg -O2 -Wall -fno-implicit-templates -fPIC
 #CXXFLAGS = -g -O2 -Wall -frepo
