--- a/configure.ac
+++ b/configure.ac
@@ -14,10 +14,9 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_CPP
 AC_PROG_RANLIB
-AC_PROG_CXX(gcc)
-#AC_PROG_F77(gfortran-9)
+# Use GNU gcc
+AC_PROG_CXX(gcc-11)
 AC_PROG_F77(gfortran)
-#AC_PROG_F77(g77)
 
 # Checks for libraries.
 
