--- a/projects/configure.ac
+++ b/projects/configure.ac
@@ -12,8 +12,8 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_CPP
 AC_PROG_RANLIB
-AC_PROG_CXX
-#AC_PROG_F77(gfortran-9)
+# Use GNU gcc; vs. LLVM.
+AC_PROG_CXX(gcc-11)
 AC_PROG_F77(gfortran)
 
 # Checks for libraries.
