Moving python interface to its directory 'python'
Moving  setup.py, setup.cfg, requirements.txt into directory python
Moving tracy_py.cc python/sr/tracy_py.cc

Setup.py copies README.rst to python so that it can be used
during the packaging process. .gitignore ignores this
copied file

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = libtracy
-fullname = BACT epics archiver appliance access
+fullname = Tracy library
 version = 3.5.0
 url =  https://github.com/jbengtsson/tracy-3.5
 author = Johan Bengtsson
