--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ sls-2
 *.gif
 *.log
 
+
 # Python dist
 dist/
 
@@ -49,3 +50,7 @@ libtracy.*
 
 # Files required to be doubled by python build process
 python/README.rst
+
+# Byte-compiled / optimized / DLL files
+**/__pycache__/
+*.py[cod]
