--- a/tracy/src/Makefile.am
+++ b/tracy/src/Makefile.am
@@ -15,18 +15,24 @@ AM_LDFLAGS  = -shared
 
 LIBS	    = -L/usr/local/Cellar/gcc/11.1.0_1/lib/gcc/11 \
               -lstdc++ \
+              -L/usr/local/Cellar/gsl/2.7/lib \
+              -lgsl \
               -L/usr/local/Cellar/armadillo/10.5.2/lib \
-              -larmadillo \
-              $(GSL_LIBS)
+              -larmadillo 
+#              $(GSL_LIBS)
 
 # C Preprocessor flags.
 AM_CPPFLAGS = -I../inc \
               -I/usr/local/Cellar/armadillo/10.5.2/include \
-              $(GSL_CFLAGS)
+              -I/usr/local/Cellar/gsl/2.7/include \
+              -I/usr/local/Cellar/pybind11/2.6.2/include \
+              -I/usr/local/Cellar/python@3.9/3.9.6/Frameworks/Python.framework/Versions/Current/include/python3.9
+#              $(GSL_CFLAGS)
 
 # C++ flags.
 AM_CXXFLAGS = -g -O0 -Wall -Wno-error=all -std=gnu++11 -fPIC \
-              $(GSL_CFLAGS)
+              -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC
+#              $(GSL_CFLAGS)
 
 # Fortan flags.
 FFLAGS      = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
