--- a/tracy/src/Makefile.am
+++ b/tracy/src/Makefile.am
@@ -13,23 +13,32 @@ libtracy_la_SOURCES     = tracy_lib.cc
 #  {-no-undefined | -undefined dynamic_lookup}
 AM_LDFLAGS  = -shared
 
-LIBS	    = -L/usr/local/Cellar/gcc/11.1.0_1/lib/gcc/11 \
-              -lstdc++ \
-              -L/usr/local/Cellar/gsl/2.7/lib \
+LIBS	    = -lstdc++ \
               -lgsl \
-              -L/usr/local/Cellar/armadillo/10.6.1/lib \
               -larmadillo 
-#              $(GSL_LIBS)
+              $(GSL_LIBS)
 
-# C Preprocessor flags.
-AM_CPPFLAGS = -I../inc \
-              -I/usr/local/Cellar/armadillo/10.6.1/include \
-              -I/usr/local/Cellar/gsl/2.7/include \
-              -I/usr/local/Cellar/pybind11/2.6.2/include \
-              -I/usr/local/Cellar/python@3.9/3.9.6/Frameworks/Python.framework/Versions/Current/include/python3.9 \
-              -I/usr/local/carma/include \
-              -I/usr/local/Cellar/numpy/1.21.1/lib/python3.9/site-packages/numpy/core/include
+## LIBS	    = -L/usr/local/Cellar/gcc/11.1.0_1/lib/gcc/11 \
+#              -lstdc++ \
+#              -L/usr/local/Cellar/gsl/2.7/lib \
+#              -lgsl \
+#              -L/usr/local/Cellar/armadillo/10.6.1/lib \
+#              -larmadillo 
+##              $(GSL_LIBS)
+
+# # C Preprocessor flags.
+# AM_CPPFLAGS = -I../inc \
+#               -I/usr/local/Cellar/armadillo/10.6.1/include \
+#               -I/usr/local/Cellar/gsl/2.7/include \
+#               -I/usr/local/Cellar/pybind11/2.6.2/include \
+#               -I/usr/local/Cellar/python@3.9/3.9.6/Frameworks/Python.framework/Versions/Current/include/python3.9 \
+#               -I/usr/local/carma/include \
+#               -I/usr/local/Cellar/numpy/1.21.1/lib/python3.9/site-packages/numpy/core/include
+# 
 #              $(GSL_CFLAGS)
+
+AM_CPPFLAGS = -I../inc \
+              $(GSL_CFLAGS)
 
 # C++ flags.
 AM_CXXFLAGS = -g -O0 -Wall -Wno-error=all -std=gnu++14 -fPIC \
