--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -11,11 +11,14 @@ get_nl_optics_SOURCES = get_nl_optics.cc
 opt_des_1_ptc_SOURCES = opt_des_1_ptc.cc
 opt_des_2_ptc_SOURCES = opt_des_2_ptc.cc
 
-LIBS     = -L$(TRACY_LIB)/tracy/lib -ltracy_ptc -lTPSALib -lLieLib \
+LIBS     = -L$(TRACY_LIB)/tracy/lib
+           -L$(TRACY_LIB)/tracy/lib64
+           -ltracy_ptc -lTPSALib -lLieLib \
            -L$(NUM_REC)/lib -lnum_rec \
            -L/usr/local/Cellar/gsl/2.7.1/lib \
            -L/net/home/lli/OPAL/OPAL-2.0.1/include \
-	   -lstdc++ \
+           -L/opt/OPAL-2.2.1/lib \
+           -lstdc++ \
            -lm \
            -lgsl -lgslcblas \
            -lgfortran
