--- a/tracy/src/Makefile.am
+++ b/tracy/src/Makefile.am
@@ -5,7 +5,9 @@ libtracy_a_SOURCES     = tracy_lib.cc
 libtracy_ptc_a_SOURCES = tracy_ptc_lib.cc
 
 #INCLUDES = -I../inc -I$(NUM_REC)/inc
-AM_CPPFLAGS = -I/usr/local/Cellar/gsl/2.7.1/include \
+# GSL_INCLUDE = -I/usr/local/Cellar/gsl/2.7.1/include
+GSL_INCLUDE = -I/net/home/lli/OPAL/OPAL-2.0.1/include
+AM_CPPFLAGS = $(GSL_INCLUDE) \
               -I../inc -I$(NUM_REC)/inc
 #INCLUDES = -I../inc -I$(NUM_REC)/inc \
 #	   -I/usr/include/c++/3.3.6
