--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -11,19 +11,22 @@ get_nl_optics_SOURCES = get_nl_optics.cc
 opt_des_1_ptc_SOURCES = opt_des_1_ptc.cc
 opt_des_2_ptc_SOURCES = opt_des_2_ptc.cc
 
-LIBS     = -L$(TRACY_LIB)/tracy/lib \
-           -L$(TRACY_LIB)/tracy/lib64 \
-           -ltracy_ptc -lTPSALib -lLieLib \
-           -L$(NUM_REC)/lib -lnum_rec \
-           -L/usr/local/Cellar/gsl/2.7.1/lib \
-           -L/net/home/lli/OPAL/OPAL-2.0.1/lib \
-           -L/opt/OPAL-2.2.1/lib \
-           -lstdc++ \
-           -lm \
-           -lgsl -lgslcblas \
-           -lgfortran
+GSL_INCLUDE = /usr/local/Cellar/gsl/2.7.1
+# GSL_INCLUDE = /net/home/lli/OPAL/OPAL-2.0.1
+
+LIBS        = -L$(TRACY_LIB)/tracy/lib \
+              -ltracy_ptc -lTPSALib -lLieLib \
+              -L$(NUM_REC)/lib -lnum_rec \
+              -lstdc++ \
+              -lm \
+              -L$(GSL_INCLUDE)/lib -lgsl -lgslcblas \
+              -lgfortran
+
 AM_CPPFLAGS = -I/opt/OPAL-2.2.1/lib \
-              -I$(TRACY_LIB)/tracy/inc -I$(NUM_REC)/inc
+              -I$(TRACY_LIB)/tracy/inc -I$(NUM_REC)/inc \
+              -I$(GSL_INCLUDE)/include
+
 AM_FFLAGS   = -g -O0 -Wall -fbounds-check
+
 AM_CXXFLAGS = -g -O0 -Wall -fPIC
 #AM_CXXFLAGS = -g -O0 -Wall -Wno-non-template-friend -fPIC -Wl,--no-relax
