--- a/TPSA/Makefile.am
+++ b/TPSA/Makefile.am
@@ -5,9 +5,9 @@ libTPSALib_a_SOURCES = TPSALib.f
 libLieLib_a_SOURCES  = LieLib.f
 
 #FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=large
-#FFLAGS    = -g -O5 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium \
-#	    -w -fallow-argument-mismatch -O2
+# FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium \
+#	    -w -fallow-argument-mismatch
 FFLAGS    = -g -O2 -Wall -fbounds-check -fdefault-integer-8 -mcmodel=medium \
-	    -w -fallow-argument-mismatch
+	    -w -Wno-argument-mismatch
 
 AM_FFLAGS = -g -O2 -Wall -fbounds-check -fPIC
